--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -9,5 +9,6 @@
     "fieldRequired": "Required field",
     "fieldEmailInvalid": "Invalid email",
     "fieldPasswordInvalid": "Invalid password",
-    "fieldConfirmPasswordInvalid": "Passwords do not match"
+    "fieldConfirmPasswordInvalid": "Passwords do not match",
+    "authErrorsSchema": "{schema, select, invalidStateException{A user is already signed in} codeDeliveryFailure{Failed to send code to email, please try again.} codeMismatch{Code provided is wrong, please try again.} invalidParameter{Some field filled in incorrectly.} usernameExists{There is already an account with this email.} notAuthorized{Unconfirmed email, confirm it.} userNotConfirmed{Unconfirmed email, confirm it.} signedOut{Incorrect email or password.} limitExceeded{Too many attempts in a row, try again later.} invalidParameter{Email probably already confirmed.} tooManyFailedAttempts{Looks like you tried the code wrong too many times, get in touch.} userNotFound{We couldn't find this registered email.} internalError{We are experiencing internal issues, please try again later.} codeMismatch{Code provided is wrong, please try again.} other{An error occurred while confirming email.}}"
 }
