--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -9,5 +9,6 @@
     "fieldRequired": "Campo é obrigatório",
     "fieldEmailInvalid": "Email inválido",
     "fieldPasswordInvalid": "Senha inválida",
-    "fieldConfirmPasswordInvalid": "As senhas não conferem"
+    "fieldConfirmPasswordInvalid": "As senhas não conferem",
+    "authErrorsSchema": "{schema, select, invalidStateException{Um usuário já está conectado} codeDeliveryFailure{Falha ao enviar código para o e-mail, tente novamente.} codeMismatch{Código fornecido está errado, tente novamente.} invalidParameter{Algum campo preenchido de forma errada.} usernameExists{Já existe um cadastro com este e-mail.} notAuthorized{E-mail não confirmado, confirme-o.} userNotConfirmed{E-mail não confirmado, confirme-o.} signedOut{E-mail ou senha incorretos.} limitExceeded{Muitas tentativas em sequência, tente novamente mais tarde.} invalidParameter{E-mail, provavelmente, já confirmado.} tooManyFailedAttempts{Parece que você tentou errou o código muitas vezes, entre em contato.} userNotFound{Não encontramos este e-mail cadastrado.} internalError{Estamos com problemas internos, tente mais tarde.} codeMismatch{Código fornecido está errado, tente novamente.} other{Ocorreu algum erro ao confirmar e-mail.}}"
 }
