--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5,6 +5,15 @@
     "login": "Login",
     "register": "Cadastrar",
     "forgotPassword": "Esqueceu sua senha?",
+    "access": "Access",
+    "send": "Send",
+    "resetPasswordPageText": "Enter the email you used to create your account so we can send you a code for reseting your password",
+    "backToLogin": "Back to login",
+    "verifyEmail": "Verify email",
+    "newPasswordPageText": "Fill in the code received by email and your new password to reset it",
+    "newPassword": "New password",
+    "confirmNewPassword": "Confirm new password",
+    "code": "Code",
 
     "fieldRequired": "Required field",
     "fieldEmailInvalid": "Invalid email",
