--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -5,6 +5,15 @@
     "login": "Login",
     "register": "Cadastrar",
     "forgotPassword": "Esqueceu sua senha?",
+    "access": "Acessar",
+    "resetPasswordPageText": "Digite o e-mail que você usou para criar sua conta para que possamos enviar um código para redefinir sua senha",
+    "send": "Enviar",
+    "backToLogin": "Voltar para o login",
+    "verifyEmail": "Verifique o e-mail",
+    "newPasswordPageText": "Preencha o código recebido por e-mail e sua nova senha para redefini-la",
+    "newPassword": "Nova senha",
+    "confirmNewPassword": "Confirme a nova senha",
+    "code": "Código",
 
     "fieldRequired": "Campo é obrigatório",
     "fieldEmailInvalid": "Email inválido",
