--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -19,6 +19,7 @@
     "loginSuccess": "Login bem-sucedido",
     "goToHome": "Ir para a página inicial",
     "adminPage": "Página de administração",
+    "registerUser": "Registrar Usuário",
 
     "fieldRequired": "Campo é obrigatório",
     "fieldEmailInvalid": "Email inválido",
