--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -18,10 +18,14 @@
     "loginNewPasswordText": "Por favor, informe sua nova senha",
     "loginSuccess": "Login bem-sucedido",
     "goToHome": "Ir para a página inicial",
-    "adminPage": "Página de administração",
+    "managementPage": "Gestão de usuários",
     "registerUser": "Registrar Usuário",
     "createUserSuccess": "Usuário criado com sucesso",
     "name": "Nome",
+    "createUser": "Criar Usuário",
+    "createUserText": "Preencha as informações do usuário a ser criado:",
+    "role": "Função",
+    "moreFeaturesSoon": "Mais recursos em breve...",
 
     "fieldRequired": "Campo é obrigatório",
     "fieldEmailInvalid": "Email inválido",
