--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -18,10 +18,14 @@
     "loginNewPasswordText": "Please, enter your new password",
     "loginSuccess": "Login success",
     "goToHome": "Go to home",
-    "adminPage": "Admin Page",
+    "managementPage": "User Management Page",
     "registerUser": "Register User",
     "createUserSuccess": "User created successfully",
     "name": "Name",
+    "createUser": "Create User",
+    "createUserText": "Fill in the information of the user to be created:",
+    "role": "Role",
+    "moreFeaturesSoon": "More features coming soon...",
 
     "fieldRequired": "Required field",
     "fieldEmailInvalid": "Invalid email",
