--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -27,6 +27,7 @@
     "role": "Role",
     "moreFeaturesSoon": "More features coming soon...",
     "roleSchema": "{schema, select, INTELICITY{Intelicity} ADMIN{Administrator} other{Collaborator}}",
+    "logout": "Logout",
 
     "fieldRequired": "Required field",
     "fieldEmailInvalid": "Invalid email",
