--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -20,6 +20,7 @@
     "goToHome": "Go to home",
     "managementPage": "User Management Page",
     "registerUser": "Register User",
+    "manageUsers": "Manage Users",
     "createUserSuccess": "User created successfully",
     "name": "Name",
     "createUser": "Create User",
