--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -16,9 +16,8 @@
     "code": "Código",
     "newPasswordNeeded": "Nova senha necessária",
     "loginNewPasswordText": "Por favor, informe sua nova senha",
-    "loginSuccess": "Login bem-sucedido",
     "goToHome": "Ir para a página inicial",
-    "managementPage": "Gestão de usuários",
+    "managementPage": "Página de Gestão de Usuários",
     "registerUser": "Registrar Usuário",
     "manageUsers": "Gerenciar Usuários",
     "createUserSuccess": "Usuário criado com sucesso",
