password required change

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -31,6 +31,7 @@
     "logout": "Logout",
     "updateUser": "Update User",
     "adminDontUpdateAdmin": "Admins can't update other admins",
+    "passwordRequirements": "Password must contain at least 8 characters, one uppercase letter, one lowercase letter, one number and one special character",
 
     "fieldRequired": "Required field",
     "fieldEmailInvalid": "Invalid email",
