--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -38,6 +38,11 @@
     "fieldEmailInvalid": "Email inválido",
     "fieldPasswordInvalid": "Senha inválida",
     "fieldConfirmPasswordInvalid": "As senhas não conferem",
+    "passwordMinimumLength": "A senha deve conter no mínimo 8 caracteres",
+    "passwordUppercase": "A senha deve conter pelo menos uma letra maiúscula",
+    "passwordLowercase": "A senha deve conter pelo menos uma letra minúscula",
+    "passwordNumber": "A senha deve conter pelo menos um número",
+    "passwordSpecialCharacter": "A senha deve conter pelo menos um caractere especial (ex: !@#$%^&*)",
 
     "authErrorsSchema": "{schema, select, invalidStateException{Usuário já está conectado} codeDeliveryFailure{Falha ao enviar código para o e-mail, tente novamente} codeMismatch{Código fornecido está errado, tente novamente} invalidParameter{Algum campo preenchido de forma errada} usernameExists{Já existe um cadastro com este e-mail} notAuthorized{E-mail ou senha incorretos} userNotConfirmed{E-mail não confirmado, confirme-o} signedOut{E-mail ou senha incorretos} limitExceeded{Muitas tentativas em sequência, tente novamente mais tarde} tooManyFailedAttempts{Parece que você tentou errou o código muitas vezes, entre em contato} userNotFound{Não encontramos este e-mail cadastrado} internalError{Estamos com problemas internos, tente mais tarde} other{Ocorreu algum erro ao confirmar e-mail}}",
     "entityErrorMessage": "Campo {entityErrorMessage} não é válido",
